--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,11 @@ version = "0.1.0"
 authors = ["Ramesh <mail2.rameshr@gmail.com>"]
 
 [dependencies]
+serde = "1.0"
+serde_derive = "1.0"
+
+# serde_json is just for the example, not required in general
+serde_json = "1.0"
 
 [[bin]]
 name = "reference_example"
@@ -16,3 +21,7 @@ path = "src/functions.rs"
 [[bin]]
 name = "closures_ex"
 path = "src/closures.rs"
+
+[[bin]]
+name = "json_serde"
+path = "src/json_serde.rs"
