solution for sum of nprimes
a program which determines the sum of the first N prime numbers.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,7 @@ path = "src/json_serde.rs"
 [[bin]]
 name = "string_ex"
 path = "src/strings.rs"
+
+[[bin]]
+name = "sum_nprimes"
+path = "src/sum_of_n_primes.rs"
